# curio-rss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  PRIVACY.md  README.md  SECURITY.md  biome.json  deny.toml  justfile  lefthook.yml  package-lock.json  package.json  svelte.config.js  vitest.config.ts
.claude/plans/: brief.md  prd.md
.claude/skills/add-source/: SKILL.md
.claude/skills/contract-change/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml  security.yml
apps/desktop/: Makefile  biome.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: README.md  package.json  tsconfig.json  wdio.conf.ts
apps/desktop/e2e/specs/: smoke.e2e.ts
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: generate-icons.sh  icon.icns  squircle-icon.py
apps/desktop/src-tauri/src/: discovery.rs  dto.rs  error.rs  events.rs  image_cache.rs  ipc_policy.rs  lib.rs  logging.rs  main.rs  menu.rs  notify.rs  paths.rs  refresh_scheduler.rs
apps/desktop/src-tauri/src/commands/: articles.rs  destinations.rs  feeds.rs  health.rs  mod.rs  opml.rs  platform.rs  reddit.rs  settings.rs  state.rs  tags.rs  theme.rs
apps/desktop/src-tauri/src/core/feeds/: parser.rs
apps/desktop/src-tauri/src/core/models/: settings.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/tests/: export_bindings.rs
apps/desktop/src/lib/: bindings.ts
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/desktop/src/tests/: a11y-smoke.test.ts  actions.test.ts  add-feed.test.ts  article-list.test.ts  article-tags.test.ts  articles.test.ts  bindings-contract.test.ts  doctor.test.ts  (+49 more)
crates/curio-cli/: Cargo.toml
crates/curio-cli/src/: app.rs  cli.rs  config.rs  main.rs  output.rs  resolve.rs
crates/curio-cli/src/commands/: articles.rs  feeds.rs  init.rs  inspect.rs  mod.rs  reddit.rs  transfer.rs
crates/curio-cli/tests/: cli.rs
crates/curio-cli/tests/support/: mod.rs
crates/curio-core/: Cargo.toml
crates/curio-core/src/: handle.rs  lib.rs  secrets.rs
crates/curio-core/src/content/: extract.rs  markdown.rs  mod.rs  readable.rs  sanitize.rs
crates/curio-core/src/enrich/: mod.rs  reddit.rs  reddit_auth.rs
crates/curio-core/src/events/: emitter.rs  fold.rs  log.rs  mod.rs  reader.rs
crates/curio-core/src/export/: manifest.rs  mod.rs  note.rs
crates/curio-core/src/feeds/: mod.rs  opml.rs  parse.rs
crates/curio-core/src/fetch/: client.rs  mod.rs  policy.rs
crates/curio-core/src/import/: mod.rs
crates/curio-core/src/model/: mod.rs
crates/curio-core/src/storage/: migrations.rs  mod.rs  pool.rs  repo.rs  writer.rs
crates/curio-core/src/storage/migrations/: 0001_init.sql  0002_feed_scoped_dedupe.sql  0003_feed_tags.sql  0004_article_lead_image.sql  0005_feed_sort_order.sql  0006_feed_full_text.sql
crates/curio-core/tests/: content_golden.rs  events.rs  export.rs  fetch.rs  fold_prop.rs  handle.rs  live_network.rs  storage.rs
crates/curio-core/tests/golden/: schema_v1.txt
crates/curio-core/tests/snapshots/: content_golden__golden_html_to_markdown@article-page.html.snap  content_golden__golden_html_to_markdown@code-heavy.html.snap  content_golden__golden_html_to_markdown@fragment-post.html.snap  content_golden__golden_html_to_markdown@xss-corpus.html.snap
crates/curio-fixtures/: Cargo.toml
crates/curio-fixtures/benches/: cold_start.rs
crates/curio-fixtures/src/: lib.rs  main.rs
crates/curio-types/: Cargo.toml
crates/curio-types/src/: checksum.rs  destination.rs  event.rs  frontmatter.rs  id.rs  lib.rs  manifest.rs  marker.rs  timestamp.rs
crates/curio-types/tests/: contract_roundtrip.rs  newtype_props.rs  schema_fixtures.rs
crates/curio-types/tests/common/: mod.rs
docs/: cli.md
docs/design/: architecture.md  contracts-draft.md  decisions.md  known-issues.md  roadmap.md
docs/design/history/: validation-report.md
docs/design/research/: backend.json  critique.json  designs.json  frontend.json  landscape.json  ossEng.json  roadmap.json  verdicts.json
docs/release/: macos-checklist.md  runbook.md
fixtures/: README.md
fixtures/feeds/: atom.xml  feed.json  reddit_gallery.json  reddit_post.json  rss2.xml  youtube-atom.xml
fixtures/html/: article-page.html  code-heavy.html  fragment-post.html  xss-corpus.html
fixtures/import/: pocket.csv
fixtures/nasty/: reddit_hostile.json
fixtures/opml/: nested.opml  simple.opml  sparse.opml
schemas/: CHANGELOG.md  README.md  events.v1.json  frontmatter.v1.json
scripts/: bundle-ytdlp.sh  check-frontend-bans.sh  gen-types.sh  setup.sh
site/: index.html  styles.css
src/: app.css  app.html
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: articles.rs  export.rs  feeds.rs  folders.rs  mod.rs  opml.rs  podcast.rs  reddit.rs  settings.rs  youtube.rs
src-tauri/src/core/: mod.rs  themes.rs
src-tauri/src/core/content/: markdown.rs  mod.rs  sanitizer.rs
src-tauri/src/core/feeds/: mod.rs  opml.rs  parser.rs
src-tauri/src/core/models/: article.rs  feed.rs  folder.rs  mod.rs  settings.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/podcast/: mod.rs
src-tauri/src/platform/reddit/: mod.rs
src-tauri/src/platform/youtube/: mod.rs
src-tauri/src/services/: cache.rs  favicon.rs  mod.rs  refresh.rs
src-tauri/src/storage/: database.rs  migrations.rs
src/lib/api/: index.ts
src/lib/stores/: feeds.ts  player.ts  ui.ts
src/lib/types/: index.ts
src/lib/utils/: format.test.ts  format.ts
src/routes/: +layout.svelte  +page.svelte
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/tests/: boundary_canary.rs
(+156 files in other folders)
