# Curio — cargo workspace (core-plus-heads).
#
# The webview lives in apps/desktop, which is deliberately OUTSIDE this
# workspace until Phase 4 moves the boundary. `deny.toml` bans tauri from the
# workspace graph and `cargo run -p xtask -- boundary` double-checks
# curio-core's tree — the core must always build headless.

[workspace]
resolver = "2"
members = [
    "crates/curio-cli",
    "crates/curio-core",
    "crates/curio-types",
    "xtask",
]
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexnodeland/curio-rss"
authors = ["Alex Nodeland <nodeland.alex@gmail.com>"]

[workspace.dependencies]
curio-core = { path = "crates/curio-core", version = "0.1.0" }
curio-types = { path = "crates/curio-types", version = "0.1.0" }

ammonia = "4"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
ego-tree = "0.11"
feed-rs = "2"
htmd = "0.5"
quick-xml = "0.41"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["net", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
url = "2"
uuid = { version = "1", features = ["v7"] }

# dev-only
assert_cmd = "2"
axum = "0.8"
insta = { version = "1", features = ["glob"] }
jsonschema = { version = "0.33", default-features = false }
predicates = "3"
proptest = "1"
tempfile = "3"
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true
