[package]
name = "curio-core"
description = "The Curio reading engine: fetch, ingest, store, state, export, events — Tauri-free by construction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ammonia = { workspace = true }
chrono = { workspace = true }
curio-types = { workspace = true }
ego-tree = { workspace = true }
feed-rs = { workspace = true }
htmd = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
scraper = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# "sync" on top of the workspace's net/time: tokio::sync::Mutex backs the
# per-feed refresh serialization (see CoreHandle::refresh_feed).
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
