[package]
name = "curio-types"
description = "Shared DTOs and published contract identifiers for Curio (frontmatter/v1, events/v1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
