[package]
name = "curio-types"
description = "Shared DTOs and published contract identifiers for Curio (frontmatter/v1, events/v1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
