# curio-desktop — the Tauri desktop head (Phase 4).
#
# A thin head over Arc<CoreHandle>: ~45 #[tauri::command] wrappers with zero
# business logic, tauri-specta-generated TS bindings (committed at
# apps/desktop/src/lib/bindings.ts, CI-diffed by the ipc-contract job), and
# a strict security posture (see tauri.conf.json + capabilities/).
#
# This is the only workspace crate allowed to depend on tauri — deny.toml
# scopes the webview bans to it via `wrappers`, and
# `cargo run -p xtask -- boundary` proves curio-core stays webview-free.
#
# tauri-specta / specta / specta-typescript are pinned EXACT (`=`): the
# specta 2.x release candidates couple tightly to each other and to
# tauri 2.x — bump all three together, then regenerate + commit bindings.

[package]
name = "curio-desktop"
description = "Curio's desktop head: a thin Tauri shell over the curio-core engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Local time for the quiet-hours window (WP14 notifications); already in the
# workspace graph via curio-core, so no new licenses to triage.
chrono = { workspace = true }
curio-core = { workspace = true }
curio-types = { workspace = true }
directories = { workspace = true }
# HTML scan for feed autodiscovery + favicon (already in the workspace
# graph via curio-core — adds no new licenses to triage).
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
# protocol-asset serves the image cache through the scoped asset: protocol
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = { workspace = true }
# Only `time` — the background refresh scheduler's timers; the runtime is
# Tauri's (`tauri::async_runtime`). `macros`/`rt` stay dev-only (tokio::test).
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
# Panic hook + rotating platform-dir logs feeding the diagnostics bundle.
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
specta-typescript = "=0.0.12"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
